--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://blog.rmtph.one/</title>
-<meta http-equiv="refresh666" content="0; URL=https://blog.rmtph.one/">
+<meta http-equiv="refresh" content="0; URL=https://blog.rmtph.one/">
 <link rel="canonical" href="https://blog.rmtph.one/">
