--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL=https://blog.rmtph.one%7Bwindow.location.pathname}">
+  <meta http-equiv="refresh" content="0; URL=https://blog.rmtph.one{window.location.pathname}">
   <script type="text/javascript">
-    window.location.href = "https://blog.rmtph.one/" + window.location.pathname;
+    window.location.href = "https://blog.rmtph.one" + window.location.pathname;
   </script>
   <title>Redirecting...</title>
 </head>
